practice_3/task_1/deploy-secret.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-secret
  labels:
    app: app-secret
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-secret
  template:
    metadata:
      labels:
        app: app-secret
    spec:
      containers:
      - name: nginx
        image: nginx:1.17
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-secret
          mountPath: /etc/nginx/conf.d
        - name: secret
          mountPath: /opt/secret
      volumes:
      - name: config-secret
        configMap:
          name: app-secret
      - name: secret
        secret:
          secretName: app
