practice_3/task_1/service-secret.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-secret
spec:
  selector:
    app: app-secret
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
