practice_3/task_1/ingress-secret.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-secret
  annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: s003142.k8s.slurm.io
      http:
        paths:
          - path: /app(/secret/password)
            backend:
              serviceName: app-secret
              servicePort: 80
