practice_3/task_1/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app
spec:
  tls:
  - hosts:
    - s003142.k8s.slurm.io
    secretName: certificate
  rules:
    - host: s003142.k8s.slurm.io
      http:
        paths:
          - path: /app
            backend:
              serviceName: app
              servicePort: 80
          - path: /sec
            backend:
              serviceName: app-secret
              servicePort: 80
